--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # JWT configuration (Simple key for demo purposes)
 jwt.secret=9a4f2c8d3b7a1e6f4c8d3b7a1e6f4c8d3b7a1e6f4c8d3b7a1e6f
-jwt.expiration=86400000
+jwt.expiration=30
+    
