--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,20 @@
 spring.application.name=libreria-backend
 
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/libreria_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+
+spring.datasource.username=${DB_USER}
+
+spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Server Port 
+server.port=${PORT:8080}
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# JWT configuration (Simple key for demo purposes)
-jwt.secret=9a4f2c8d3b7a1e6f4c8d3b7a1e6f4c8d3b7a1e6f4c8d3b7a1e6f
-jwt.expiration=30
-    
+# JWT configuration
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION:30}
