--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=libreria-backend
 
+# Database Configuration - Variables de Entorno
 spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 
 spring.datasource.username=${DB_USER}
@@ -7,7 +8,7 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Server Port 
+# Server Port (Ya estaba correcto para Cloud Run)
 server.port=${PORT:8080}
 
 # JPA / Hibernate
@@ -15,6 +16,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# JWT configuration
+# JWT configuration 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION:30}
