--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=libreria-backend
 
-# Database Configuration - Variables de Entorno
-spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+# Database Configuration - Variables de Entorno (Cloud SQL Connector)
+# spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME} (COMENTADO: Usamos Socket Factory)
+spring.cloud.gcp.sql.instance-connection-name=${DB_USER}
+spring.cloud.gcp.sql.database-name=${DB_NAME}
 
 spring.datasource.username=${DB_USER}
 
