--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.application.name=libreria-backend
+spring.application.name=libreria
+
+# DESACTIVA LA AUTOCONFIGURACIÓN DE GOOGLE CLOUD SQL
+spring.cloud.gcp.sql.enabled=false 
 
 # Database Configuration - Variables de Entorno
 spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&defaultAuthenticationPlugin=mysql_native_password
@@ -8,7 +11,7 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Server Port (Ya estaba correcto para Cloud Run)
+# Server Port
 server.port=${PORT:8080}
 
 # JPA / Hibernate
