--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.application.name=libreria-backend
+spring.application.name=libreria
 
+spring.cloud.gcp.sql.enabled=false
 # Database Configuration - Variables de Entorno
 spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&defaultAuthenticationPlugin=mysql_native_password
 
