--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,20 +2,18 @@ spring.application.name=libreria
 
 spring.cloud.gcp.sql.enabled=false
 # Database Configuration - Variables de Entorno
-spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&defaultAuthenticationPlugin=mysql_native_password
-
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?currentSchema=public
 spring.datasource.username=${DB_USER}
-
 spring.datasource.password=${DB_PASS}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Server Port (Ya estaba correcto para Cloud Run)
-server.port=${PORT:8080}
+# Server Port 
+server.port=${PORT}
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT configuration 
 jwt.secret=${JWT_SECRET}
