--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=libreria
 
 spring.cloud.gcp.sql.enabled=false
-# Database Configuration - Variables de Entorno
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?currentSchema=public
+spring.datasource.url=jdbc:postgresql:///${DB_NAME}?cloudSqlInstance=${DB_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.postgres.SocketFactory&sslmode=disable
+
+# Credenciales de la Base de Datos
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
+
+# Driver y Dialecto de la DB
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Server Port 
