feat: Configure application with new properties for database, server, and JWT, and remove specific GCP dependencies.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=libreria
 
 spring.cloud.gcp.sql.enabled=false
-spring.datasource.url=jdbc:postgresql:///${DB_NAME}?cloudSqlInstance=${DB_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.postgres.SocketFactory&sslmode=disable
+# CONFIGURACIÓN SIMPLIFICADA CON SPRING CLOUD GCP STARTER
+spring.datasource.url=jdbc:postgresql://google/${DB_NAME}?cloudSqlInstance=${DB_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.postgres.SocketFactory
 
 # Credenciales de la Base de Datos
 spring.datasource.username=${DB_USER}
