--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=libreria
 
-spring.cloud.gcp.sql.enabled=false
-# CONFIGURACIÓN SIMPLIFICADA CON SPRING CLOUD GCP STARTER
-spring.datasource.url=jdbc:postgresql://google/${DB_NAME}?cloudSqlInstance=${DB_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.postgres.SocketFactory
+# CONFIGURACIÓN DE CONEXIÓN A BASE DE DATOS LOCAL O REMOTA
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 # Credenciales de la Base de Datos
 spring.datasource.username=${DB_USER}
