feat: Add initial application properties for database, JPA, server, and JWT configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,19 @@
-spring.application.name=libreria
+# ARCHIVO: src/main/resources/application.properties
 
-# CONFIGURACIÓN DE CONEXIÓN A BASE DE DATOS LOCAL O REMOTA
+# 1. Configuración de la Base de Datos (JDBC Estándar para AWS RDS)
+# Las variables DB_HOST, DB_PORT, DB_NAME, DB_USER y DB_PASS serán definidas en Elastic Beanstalk.
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-
-# Credenciales de la Base de Datos
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-
-# Driver y Dialecto de la DB
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Server Port 
-server.port=${PORT}
-
-# JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# 2. Configuración JPA/Hibernate (mantener esto)
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 
-# JWT configuration 
+# 3. Configuración del Servidor Web (mantener esto)
+server.port=8080 
+
+# 4. Variables de Entorno Adicionales (mantener esto)
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION:30}
