--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 # ARCHIVO: src/main/resources/application.properties
 
-# 1. Configuración de la Base de Datos (JDBC Estándar para AWS RDS)
-# Las variables DB_HOST, DB_PORT, DB_NAME, DB_USER y DB_PASS serán definidas en Elastic Beanstalk.
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+# 1. Configuración de la Base de Datos (PostgreSQL Local)
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?currentSchema=public
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -10,9 +9,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # 2. Configuración JPA/Hibernate (mantener esto)
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # 3. Configuración del Servidor Web (mantener esto)
-server.port=8080 
+server.port=${PORT} 
 
 # 4. Variables de Entorno Adicionales (mantener esto)
 jwt.secret=${JWT_SECRET}
